<resources>
    <string name="app_name">씨네마천국</string>

    <string name="save">저 장</string>
    <string name="cancel">취 소</string>
    <string name="report">신고하기</string>
    <string name="recommend">추천</string>
    <string name="write">작성하기</string>
    <string name="show_more">모두 보기</string>
    <string name="reserve">예매하기</string>
    <string name="show_detail">상세보기</string>
    <string name="stick"> | </string>
    <string name="movie_list">영화 목록</string>
    <string name="movie_api">영화 API</string>
    <string name="setting">설정</string>
    <string name="user_settings">사용자 설정</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content_needed">내용을 입력해 주세요.</string>
    <string name="missing_movie_list">저장된 영화 목록이 존재하지 않습니다. 인터넷을 켜고 다시 실행해주세요.</string>
    <string name="missing_movie">저장된 영화 상세정보가 존재하지 않습니다. 인터넷을 켜고 다시 실행해주세요.</string>
    <string name="missing_reviews">저장된 영화 한줄평 목록이 존재하지 않습니다. 인터넷을 켜고 다시 실행해주세요.</string>
    <string name="server_failed">서버와의 통신에 실패하였습니다. 인터넷 연결을 확인해주세요.</string>
    <string name="database_loaded">인터넷이 연결되어있지않아 저장된 데이터를 불러왔습니다.</string>
    <string name="gallery">갤러리</string>
    <string name="reservation_order">예매율순</string>
    <string name="curation_order">큐레이션</string>
    <string name="coming_soon_order">상영예정</string>

    <!--> Movie Detail Act <-->
    <string name="reservation_rate">예매율</string>
    <string name="star_rate">평점</string>
    <string name="accumulated_attendance">누적관객수</string>
    <string name="plot">줄거리</string>
    <string name="director_actress">감독/출연</string>
    <string name="director">감독</string>
    <string name="actress">출연</string>
    <string name="review">한줄평</string>
    <string name="snack_bar_review_saved">리뷰작성이 완료되었습니다.</string>
    <string name="snack_bar_review_canceled">리뷰작성이 취소되었습니다.</string>
    <!--> Movie Detail Act <-->

    <!--> Review Write Act <-->
    <string name="review_write_title">한줄평 작성</string>
    <string name="request_rating">평점을 입력해 주세요</string>
    <string name="request_under_100ch">100자 이내로 작성해주세요.</string>
    <!--> Review Write Act <-->

    <!--> Review More Act <-->
    <string name="review_more_title">한줄평 목록</string>
    <string name="participants_count">(000명 참여)</string>
    <string name="star_rating_count">0.0</string>
    <!--> Review More Act <-->

    <!--> Temp <-->
    <string name="name">Malibin</string>
    <string name="email">nightmare73@naver.com</string>
    <string name="movie_name">영화이름</string>
    <string name="content">군도, 백성을 구하라!  양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다.  쌍칼 도치 vs 백성의 적 조윤 잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈, 삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.  뭉치면 백성, 흩어지면 도적! 망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조윤과 한 판 승부를 시작하는데…</string>
    <!--> Temp <-->
</resources>

