<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_movie_list"
            android:icon="@drawable/ic_list"
            android:title="@string/movie_list" />
        <item
            android:id="@+id/menu_movie_api"
            android:icon="@drawable/ic_review"
            android:title="@string/movie_api" />
        <item
            android:id="@+id/menu_movie_reserve"
            android:icon="@drawable/ic_book"
            android:title="@string/reserve" />

    </group>

    <item android:title="@string/setting">

        <menu>

            <item
                android:id="@+id/menu_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/user_settings" />

        </menu>

    </item>

</menu>