<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".movie.select.MovieSelectActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_movie_select_act"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:paddingLeft="34dp"
        android:paddingRight="34dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_movie_select_act_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_movie_select_act_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="1. 군 도"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_slider1" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_movie_select_act_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_rate"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_movie_select_act_reservation_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="61.6%"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/stick"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_movie_select_act_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15세 관람가"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/stick"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_movie_select_act_dday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="D-1"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_movie_select_act_detail"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/circle_border_rect_orange"
        android:text="@string/show_detail"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>